Encode can move state #388
Partition processor
    Flatten neural input signal
    And and not processor validation
    Mask processor
    Tiles processor
    FeaturesProcessor and DecodeProcessor
    fix print net app